# Python_TechnicalVision_Labs

./: .gitignore  README.md  pyproject.toml
Lab1/: lab1.ipynb  main.py  output.ipynb  pyproject.toml
Lab1/test_images/: pic2jpeg
Lab2/: lab2.ipynb
Lab3/: lab3.ipynb  pyproject.toml
Lab4/: lab4.ipynb
Lab5/: lab5.ipynb
Lab6/: lab6.ipynb
Lab7/: lab7.ipynb
