[tool.poetry]
name = "python-technicalvision-labs"
version = "0.1.0"
description = ""
authors = ["whitegolyb <kirillulianow@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.26.0"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.1"
tensorflow = "^2.15.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
dlib = "^19.24.2"
ultralytics = "^8.0.219"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
