[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["whitegolyb <kirillulianow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
opencv-python = "^4.8.1.78"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
